--- a/templates/form/index.html
+++ b/templates/form/index.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en" class="no-js" >
 <head>
@@ -10,8 +11,8 @@
    
 
     <!-- CSS -->
-    <link rel="stylesheet" href="/static/css2/vendor.css">
-    <link rel="stylesheet" href="/static/css2/styles.css">
+    <link rel="stylesheet" href="{% static 'css2/vendor.css' %}">
+    <link rel="stylesheet" href="{% static 'css2/styles.css' %}">
 
 
     
